--- a/1.2.pricing_UI/pricing/src/components/Order/Order.css
+++ b/1.2.pricing_UI/pricing/src/components/Order/Order.css
@@ -1,5 +1,17 @@
 .image-item {
-    min-width: 100%;
-    width: auto;
-    max-width: 100%;
+  max-width: 100%;
+  max-height: 150px;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+}
+
+@media (max-width: 576px) {
+  .image-container {
+    max-width: 150px; /* Reduce the maximum width of the container on smaller screens */
   }
+  .image-item {
+    max-width: 100%;
+    max-height:100px;
+  }
+}
