--- a/1.2.pricing_UI/pricing/src/components/ChatBot/ChatBot.css
+++ b/1.2.pricing_UI/pricing/src/components/ChatBot/ChatBot.css
@@ -101,7 +101,7 @@
     height: 16px;
     width: 80%;
     margin-bottom: 10px;
-    margin-left: 20px;
+    margin-left: 30px;
 
   }
   
@@ -110,4 +110,18 @@
     flex-direction: column;
     align-items: flex-start;
   }
-  
+  .chatbot-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 350px;
+    height: 450px;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    z-index: 9999; /* Add this line to set the z-index value */
+  }
+   
